// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Secret Manager Wizard should render form 1`] = `
<div>
  <div
    style="display: flex; height: 640px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.aws
          </span>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              1
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.test
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceAws.overview.heading
            </h2>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="InputWithIdentifier--txtNameContainer TextInput--main"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                        >
                          <p
                            class="StyledProps--font StyledProps--main"
                          >
                            ID
                            :
                          </p>
                          <span
                            class="bp3-popover-wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <div
                                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                                tabindex="0"
                              >
                                <span
                                  class="bp3-editable-text-content"
                                  style="height: 1px; line-height: 1px; min-width: 0;"
                                />
                              </div>
                            </span>
                          </span>
                          <span
                            class="bp3-icon bp3-icon-edit StyledProps--main"
                            icon="edit"
                            style="vertical-align: middle;"
                          >
                            <svg
                              data-icon="edit"
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <desc>
                                edit
                              </desc>
                              <path
                                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="bp3-form-group"
                          data-id="name-0"
                        >
                          <label
                            class="bp3-label"
                            for="name"
                          >
                            connectors.name
                             
                            <span
                              class="bp3-text-muted"
                            />
                          </label>
                          <div
                            class="bp3-form-content"
                          >
                            <div
                              class="bp3-input-group"
                            >
                              <input
                                autocomplete="off"
                                class="bp3-input"
                                name="name"
                                type="text"
                                value=""
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group"
                        data-id="awsAccountId-1"
                      >
                        <label
                          class="bp3-label"
                          for="awsAccountId"
                        >
                          connectors.ceAws.overview.awsAccountId
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="awsAccountId"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main"
                          style="font-size: 13px; font-weight: normal;"
                        >
                          optionalField
                          <span
                            class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                            data-name="edit"
                            data-testid="description-edit"
                            icon="edit"
                          >
                            <svg
                              data-icon="edit"
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <desc>
                                edit
                              </desc>
                              <path
                                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                      <div
                        class="StyledProps--font StyledProps--main"
                      >
                        <label
                          class="Label--main"
                          style="font-size: 13px; font-weight: normal;"
                        >
                          optionalField
                          <span
                            class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                            data-name="edit"
                            data-testid="tags-edit"
                            icon="edit"
                          >
                            <svg
                              data-icon="edit"
                              height="12"
                              viewBox="0 0 16 16"
                              width="12"
                            >
                              <desc>
                                edit
                              </desc>
                              <path
                                d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </label>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main buttonPanel"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          continue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 2`] = `
<div>
  <div
    style="display: flex; height: 640px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.aws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              2
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.test
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceAws.cur.heading
            </h2>
            <div
              style="padding-bottom: 10px;"
            >
              connectors.ceAws.cur.subheading
            </div>
            <div>
              <div
                style="display: flex;"
              >
                <span
                  class="bp3-icon bp3-icon-info-sign StyledProps--main StyledProps--color StyledProps--color-primary5"
                  icon="info-sign"
                  style="padding-right: 5px;"
                >
                  <svg
                    data-icon="info-sign"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      info-sign
                    </desc>
                    <path
                      d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  style="padding-right: 10px; color: rgb(2, 120, 213);"
                >
                  connectors.ceAws.cur.followInstruction
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
                style="padding-bottom: 10px; padding-top: 10px;"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                  style="width: 500px;"
                >
                  <div
                    style="display: flex; justify-content: center;"
                  >
                    <button
                      class="bp3-button Button--button StyledProps--font StyledProps--main launchTemplateBut Button--with-current-color"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        connectors.ceAws.cur.launchTemplate
                      </span>
                      <span
                        class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                        icon="chevron-right"
                      >
                        <svg
                          data-icon="chevron-right"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            chevron-right
                          </desc>
                          <path
                            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                  <div
                    style="text-align: center;"
                  >
                    connectors.ceAws.cur.login
                  </div>
                </div>
              </div>
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="reportName-0"
                      >
                        <label
                          class="bp3-label"
                          for="reportName"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <span
                              class="StyledProps--font StyledProps--main StyledProps--inline"
                            >
                              connectors.ceAws.cur.reportName
                            </span>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <span
                                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                                  data-icon="info"
                                  tabindex="0"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 12 12"
                                    width="12"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="reportName"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="s3BucketName-1"
                      >
                        <label
                          class="bp3-label"
                          for="s3BucketName"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <span
                              class="StyledProps--font StyledProps--main StyledProps--inline"
                            >
                              connectors.ceAws.cur.bucketName
                            </span>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <span
                                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                                  data-icon="info"
                                  tabindex="0"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 12 12"
                                    width="12"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="s3BucketName"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                          icon="chevron-left"
                        >
                          <svg
                            data-icon="chevron-left"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-left
                            </desc>
                            <path
                              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          previous
                        </span>
                      </button>
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          continue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="extension"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main extention"
        >
          <span>
            <h2>
              How to Create Cost and Usage Report?
            </h2>
            <div
              class="listPoints"
            >
              <p>
                Once the template is launched in the AWS console:
              </p>
              <ol
                type="A"
              >
                <li>
                  <h3
                    style="font-weight: 700;"
                  >
                    Creating a Report
                  </h3>
                  <ol>
                    <li>
                      Click 
                      <span
                        class="gray"
                      >
                        Create Report
                      </span>
                       and provide a Cost and Usage Report Name. Copy this and paste it in the space provided on the left.
                    </li>
                    <li>
                      Check Include resource IDs and keep other selections as is.
                    </li>
                    <li>
                      Click Next.
                    </li>
                  </ol>
                </li>
                <li>
                   
                  <h3
                    style="font-weight: 700;"
                  >
                    Delivery options
                  </h3>
                  <ol>
                    <li>
                      Click 
                      <span
                        class="gray"
                      >
                        Configure
                      </span>
                       to create an S3 bucket.
                    </li>
                    <li>
                      Provide an S3 bucket name and select Region (preferably US East - N.Virginia).
                    </li>
                    <li>
                       
                      Click 
                      <span
                        class="gray"
                      >
                        Next
                      </span>
                      , then click 
                      <span
                        class="gray"
                      >
                        Save
                      </span>
                      .
                    </li>
                    <li>
                       Enter a Report path prefix.
                    </li>
                    <li>
                      Configure the report with the following configuration:
                      <ul>
                        <li>
                          Time granularity: 
                          <span
                            class="gray"
                          >
                            Hourly
                          </span>
                        </li>
                        <li>
                          Report versioning: 
                          <span
                            class="gray"
                          >
                            Overwrite Existing Report Version
                          </span>
                        </li>
                        <li>
                          You do not need to enable any report data integrations.
                        </li>
                        <li>
                          Compression: 
                          <span
                            class="gray"
                          >
                            GZIP
                          </span>
                        </li>
                      </ul>
                    </li>
                    <li>
                      Click 
                      <span
                        class="gray"
                      >
                        Next
                      </span>
                      , then click
                       
                      <span
                        class="gray"
                      >
                        Review and Complete
                      </span>
                       .
                    </li>
                    <li>
                      Copy and enter the CUR Report name and S3 bucket name.
                    </li>
                  </ol>
                </li>
              </ol>
              <span>
                More help:
                <ul>
                  <li>
                    <a>
                      Watch help video
                    </a>
                  </li>
                  <li>
                    <a>
                      Harness Documentation
                    </a>
                  </li>
                  <li>
                    <a>
                      Creating Cost and Usage Reports
                    </a>
                  </li>
                  <li>
                    <a>
                      Billing and Cost Management Policy Examples
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </span>
        </div>
      </div>
      <span
        class="closeBtn"
      >
        <span
          class="bp3-icon bp3-icon-caret-left StyledProps--main"
          icon="caret-left"
        >
          <svg
            data-icon="caret-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              caret-left
            </desc>
            <path
              d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 3`] = `
<div>
  <div
    style="display: flex; height: 640px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.aws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              3
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.test
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceAws.crossAccountRoleStep1.heading
            </h2>
            <div
              class="infobox"
            >
              connectors.ceAws.crossAccountRoleStep1.subHeading
            </div>
            <div
              style="padding: 5px 5px 20px 5px;"
            >
              connectors.ceAws.crossAccountRoleStep1.description
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="grid"
              >
                <div
                  class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
                  data-index="0"
                  tabindex="0"
                >
                  <div>
                    <div
                      style="display: flex; padding-bottom: 7px;"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                        data-icon="main-main-zoom_in"
                        style="padding-right: 10px;"
                      >
                        <svg
                          height="32"
                          viewBox="0 0 14 14"
                          width="32"
                        >
                          <path
                            d="M13.7 12.2l-3.5-3.5c.6-.9 1-2 1-3.2 0-3-2.5-5.5-5.6-5.5S0 2.5 0 5.6s2.5 5.6 5.6 5.6c1.2 0 2.2-.4 3.2-1l3.5 3.5c.2.2.5.3.7.3.6 0 1.1-.5 1.1-1.1-.1-.2-.2-.5-.4-.7zM5.6 9.8c-2.3 0-4.2-1.9-4.2-4.2s1.9-4.2 4.2-4.2 4.2 1.9 4.2 4.2-1.9 4.2-4.2 4.2zm2.1-4.9H6.3V3.5c0-.4-.3-.7-.7-.7s-.7.3-.7.7v1.4H3.5c-.4 0-.7.3-.7.7s.3.7.7.7h1.4v1.4c0 .4.3.7.7.7s.7-.3.7-.7V6.3h1.4c.4 0 .7-.3.7-.7s-.3-.7-.7-.7z"
                            fill="#4d5969"
                          />
                        </svg>
                      </span>
                      <p>
                        <div
                          style="font-size: 8px; font-family: inter;"
                        >
                          connectors.ceAws.crossAccountRoleStep1.cost
                        </div>
                         
                        <div
                          style="font-size: 14px; font-family: inter;"
                        >
                          connectors.ceAws.crossAccountRoleStep1.visibility
                        </div>
                      </p>
                    </div>
                    <p>
                      connectors.ceAws.crossAccountRoleStep1.visibilityDes
                    </p>
                  </div>
                </div>
                <div
                  class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--interactive"
                  data-index="1"
                  tabindex="0"
                >
                  <div>
                    <div
                      style="display: flex; padding-bottom: 7px;"
                    >
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                        data-icon="gear"
                        style="padding-right: 10px;"
                      >
                        <svg
                          height="32"
                          viewBox="0 0 16 16"
                          width="32"
                        >
                          <path
                            d="M2.687 3.488a.437.437 0 01-.4.16l-.752-.144a.389.389 0 00-.432.24l-.176.48-.176.48c-.064.176 0 .384.176.464l.656.384a.45.45 0 01.208.384c-.016.224 0 .448.016.672a.434.434 0 01-.176.4l-.624.432a.378.378 0 00-.128.48l.208.464.208.464a.38.38 0 00.448.208l.736-.192c.144-.048.304.016.416.128.144.16.32.32.496.464a.437.437 0 01.16.4l-.144.752a.38.38 0 00.24.432l.48.176.48.176c.176.064.384 0 .464-.176l.384-.656c.08-.144.224-.208.384-.208.208.016.432 0 .64-.016a.434.434 0 01.4.176l.432.64c.112.16.304.208.48.128l.464-.208.464-.208a.38.38 0 00.208-.448l-.192-.72a.4.4 0 01.128-.416c.16-.144.32-.32.464-.496a.437.437 0 01.4-.16l.752.144a.38.38 0 00.432-.24l.176-.48.176-.48c.064-.176 0-.384-.176-.464l-.656-.368c-.144-.08-.208-.224-.208-.384.016-.224 0-.448-.016-.672a.434.434 0 01.176-.4l.64-.432a.378.378 0 00.128-.48l-.208-.464-.208-.464a.38.38 0 00-.448-.208l-.72.208c-.16.048-.32 0-.416-.128a4.408 4.408 0 00-.48-.464.437.437 0 01-.16-.4l.144-.752a.38.38 0 00-.24-.432l-.48-.176-.48-.176c-.176-.064-.384 0-.464.176l-.368.64c-.08.144-.224.208-.384.208-.24-.016-.464 0-.704.016a.434.434 0 01-.4-.176l-.432-.624a.378.378 0 00-.48-.128l-.464.208-.464.208a.38.38 0 00-.208.448l.192.736c.048.144-.016.304-.128.416-.176.096-.32.272-.464.448zm1.2 1.872A2.249 2.249 0 016.735 4a2.249 2.249 0 011.36 2.848c-.4 1.168-1.68 1.76-2.848 1.36a2.228 2.228 0 01-1.36-2.848zm10.704 4.816a.264.264 0 00-.016-.304l-.208-.208-.208-.208a.242.242 0 00-.304-.032l-.368.256c-.08.048-.176.064-.256.016a2.553 2.553 0 00-.368-.16c-.08-.032-.16-.112-.16-.192l-.08-.448a.224.224 0 00-.224-.192h-.608a.224.224 0 00-.224.192l-.08.448c-.016.096-.08.176-.176.192-.128.032-.256.096-.368.144-.08.048-.176.032-.256-.016l-.368-.272a.264.264 0 00-.304.016l-.208.208-.208.208a.242.242 0 00-.032.304l.256.368c.048.08.064.176.016.256-.064.128-.128.256-.16.384-.032.096-.096.16-.192.176l-.448.08a.224.224 0 00-.192.224v.608c0 .112.08.208.192.224l.448.08c.096.016.16.08.192.176.048.128.096.256.16.368.048.08.032.176-.016.256l-.272.368a.24.24 0 00.016.288l.208.208.208.208c.08.08.208.096.304.032l.368-.256c.08-.048.176-.064.256-.016.128.064.24.112.368.16.096.032.16.096.176.192l.08.448a.224.224 0 00.224.192h.608c.112 0 .208-.08.224-.192l.08-.448c.016-.096.08-.16.176-.192.128-.048.256-.096.368-.16.08-.048.176-.032.256.016l.368.272a.264.264 0 00.304-.016l.208-.208.208-.208a.242.242 0 00.032-.304l-.256-.368c-.048-.08-.064-.176-.016-.256.064-.112.112-.24.144-.352a.264.264 0 01.192-.176l.448-.08a.224.224 0 00.192-.224v-.608a.224.224 0 00-.192-.224l-.448-.08c-.096-.016-.16-.08-.192-.176-.032-.128-.096-.256-.144-.368-.048-.08-.032-.176.016-.256l.256-.368zm-1.584 2.688a1.318 1.318 0 01-1.872.016 1.318 1.318 0 01-.016-1.872c.512-.512 1.36-.528 1.872-.016s.528 1.344.016 1.872z"
                            fill="#30AAAF"
                          />
                        </svg>
                      </span>
                      <p>
                        <div
                          style="font-size: 8px; font-family: inter;"
                        >
                          connectors.ceAws.crossAccountRoleStep1.cost
                        </div>
                         
                        <div
                          style="font-size: 14px; font-family: inter;"
                        >
                          connectors.ceAws.crossAccountRoleStep1.optimization
                        </div>
                      </p>
                    </div>
                    <p>
                      connectors.ceAws.crossAccountRoleStep1.optimizationDes
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 4`] = `
<div>
  <div
    style="display: flex; height: 640px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.aws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              4
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.test
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceAws.crossAccountRoleStep2.heading
            </h2>
            <div
              class="infobox"
            >
              connectors.ceAws.crossAccountRoleStep2.subHeading
            </div>
            <div
              class="StyledProps--font StyledProps--main"
              style="padding-bottom: 10px; padding-top: 10px;"
            >
              <div
                class="Layout--vertical StyledProps--main"
                style="width: 500px;"
              >
                <div
                  style="display: flex; justify-content: center;"
                >
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main launchTemplateBut Button--with-current-color"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      connectors.ceAws.cur.launchTemplate
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          chevron-right
                        </desc>
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <div
                  style="text-align: center;"
                >
                  connectors.ceAws.cur.login
                </div>
              </div>
            </div>
            <div
              style="flex: 1;"
            >
              <div
                class="OverlaySpinner--overlaySpinner"
              >
                <form
                  class="FormikForm--main"
                >
                  <div>
                    <div
                      class="StyledProps--font StyledProps--main main"
                    >
                      <div
                        class="bp3-form-group dataFields"
                        data-id="crossAccountRoleArn-0"
                      >
                        <label
                          class="bp3-label"
                          for="crossAccountRoleArn"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <span
                              class="StyledProps--font StyledProps--main StyledProps--inline"
                            >
                              connectors.ceAws.crossAccountRoleStep2.roleArn
                            </span>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <span
                                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                                  data-icon="info"
                                  tabindex="0"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 12 12"
                                    width="12"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="crossAccountRoleArn"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class="bp3-form-group dataFields"
                        data-id="externalId-1"
                      >
                        <label
                          class="bp3-label"
                          for="externalId"
                        >
                          <div
                            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
                          >
                            <span
                              class="StyledProps--font StyledProps--main StyledProps--inline"
                            >
                              connectors.ceAws.crossAccountRoleStep2.extId
                            </span>
                            <span
                              class="bp3-popover-wrapper"
                            >
                              <span
                                class="bp3-popover-target"
                              >
                                <span
                                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary5"
                                  data-icon="info"
                                  tabindex="0"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 12 12"
                                    width="12"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                                      fill-rule="evenodd"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                           
                          <span
                            class="bp3-text-muted"
                          />
                        </label>
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="externalId"
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <a>
                      connectors.ceAws.crossAccountRoleStep2.dontHaveAccess
                    </a>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main buttonPanel"
                    >
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                          icon="chevron-left"
                        >
                          <svg
                            data-icon="chevron-left"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-left
                            </desc>
                            <path
                              d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          previous
                        </span>
                      </button>
                      <button
                        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                        type="submit"
                      >
                        <span
                          class="bp3-button-text"
                        >
                          saveAndContinue
                        </span>
                        <span
                          class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                          icon="chevron-right"
                        >
                          <svg
                            data-icon="chevron-right"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              chevron-right
                            </desc>
                            <path
                              d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="extension"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main extention"
        >
          <span>
            <h2>
              Create cross-account IAM role using AWS CloudFormation template
            </h2>
            <div
              class="listPoints"
            >
              <p>
                Login to your master account to launch template and create stack. 
              </p>
              <ol>
                <li>
                  You can 
                  <a>
                    Preview Template
                  </a>
                   to understand all the permissions involved
                </li>
                <li>
                  Review and Lauch Harness specified AWS CloudFormation template on AWS console
                  <ul>
                    <li>
                      Click on the checkbox to acknowledge the IAM role creation.
                    </li>
                    <li>
                      Click on 
                      <span
                        class="gray"
                      >
                        Create stack
                      </span>
                    </li>
                  </ul>
                </li>
                <li>
                  On stack details page click on 
                  <span
                    class="gray"
                  >
                    Outputs
                  </span>
                   tab and copy
                   
                  <span
                    class="gray"
                  >
                    IAM ARN
                  </span>
                  .
                </li>
                <li>
                  Provide that IAM ARN in Harness UI.
                </li>
                <li>
                  External ID is a random unique value to provide additional secure authentication.
                </li>
              </ol>
              <span>
                More help:
                <ul>
                  <li>
                    <a>
                      Harness Documentation
                    </a>
                  </li>
                </ul>
              </span>
            </div>
          </span>
        </div>
      </div>
      <span
        class="closeBtn"
      >
        <span
          class="bp3-icon bp3-icon-caret-left StyledProps--main"
          icon="caret-left"
        >
          <svg
            data-icon="caret-left"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              caret-left
            </desc>
            <path
              d="M9.5 4c-.13 0-.24.05-.33.13l-4 3.5c-.1.09-.17.22-.17.37s.07.28.17.37l4 3.5a.495.495 0 00.83-.37v-7c0-.28-.22-.5-.5-.5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Create Secret Manager Wizard should render form 5`] = `
<div>
  <div
    style="display: flex; height: 640px;"
  >
    <div
      style="width: 1050px; position: relative;"
    >
      <div
        class="StepWizard--main awsConnector StepWizard--navBar"
      >
        <div
          class="StepWizard--navBarList"
        >
          <span
            class="StepWizard--header"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="service-aws"
            >
              <svg
                height="40"
                viewBox="0 0 14 10"
                width="40"
              >
                <path
                  d="M4 3.9v.4c0 .1.1.2.1.3v.1c0 .1 0 .1-.1.1l-.1.2h-.1s-.1 0-.1-.1c-.1.1-.2 0-.2-.1s-.1-.2-.1-.3c-.4.5-.9.7-1.4.7-.4 0-.7-.1-.9-.3S.7 4.3.7 4c0-.4.1-.7.4-.9s.6-.4 1.1-.4h.5c.2 0 .3.1.5.1v-.3c0-.3-.1-.6-.2-.7-.1-.2-.3-.2-.7-.2-.2 0-.3 0-.5.1-.2 0-.3.1-.5.2 0 0-.1 0-.2.1H1v-.5-.2l.1-.1c.3-.1.4-.1.6-.2.3 0 .5-.1.8-.1.5 0 .9.1 1.2.4s.3.6.3 1.1zm-1.8.7c.2 0 .3 0 .5-.1.1-.1.3-.2.4-.3s.1-.2.1-.3V3.3c-.1 0-.2 0-.3-.1h-.4c-.3 0-.5.1-.7.2s-.3.3-.3.5.1.4.2.5.3.2.5.2zm3.6.5h-.2s-.1-.1-.1-.2l-1-3.6v-.2c0-.1 0-.1.1-.1H5.2s.1.1.1.2l.8 3 .7-3c0-.1 0-.1.1-.2h.8s.1.1.1.2l.7 3 .8-3c0-.1 0-.1.1-.2H10c.1 0 .1 0 .1.1v.2L8.8 4.8c0 .1 0 .2-.1.2h-.5c-.1.1-.2.1-.2 0 0 0-.1-.1-.1-.2l-.7-2.9-.7 2.9c0 .1 0 .1-.1.2h-.2zm5.9.1c-.2 0-.5 0-.7-.1s-.4-.1-.5-.2c-.1 0-.1-.1-.1-.1v-.4c0-.1 0-.1.1-.1h.2c.2.1.3.1.5.2.2 0 .4.1.5.1.3 0 .5 0 .7-.1.1-.1.2-.3.2-.4s0-.2-.1-.3-.2-.2-.5-.2l-.7-.2c-.3-.1-.6-.3-.7-.5s-.2-.4-.2-.7c0-.2 0-.3.1-.5.1-.1.2-.3.3-.4s.3-.2.5-.2c.2-.1.4-.1.6-.1h.6c.1 0 .2 0 .3.1.1 0 .1 0 .2.1.1 0 .1.1.1.1V1.6c0 .1 0 .1-.1.1s-.1 0-.2-.1c-.3-.1-.6-.2-.9-.2s-.5 0-.6.1-.2.2-.2.4c0 .1 0 .2.1.3s.3.2.5.2l.6.2c.3.1.6.2.7.4s.2.4.2.6 0 .4-.1.5c-.1.2-.2.3-.3.4-.1.5-.3.5-.5.6s-.4.1-.6.1z"
                  fill="#252f3e"
                />
                <g
                  fill="#f90"
                >
                  <path
                    d="M12.5 7.4C11 8.5 8.9 9.1 7 9.1c-2.6 0-5-1-6.7-2.6-.1-.1 0-.3.2-.2 1.9 1.1 4.3 1.8 6.7 1.8 1.8 0 3.5-.4 5.1-1.1.2-.1.5.2.2.4z"
                  />
                  <path
                    d="M13.1 6.7c-.2-.2-1.3-.1-1.7-.1-.1 0-.2-.1 0-.2.9-.6 2.3-.4 2.4-.2.2.2 0 1.6-.8 2.3-.1.1-.2 0-.2-.1.1-.5.5-1.5.3-1.7z"
                  />
                </g>
              </svg>
            </span>
          </span>
          <span
            class="StepWizard--title StepWizard--header"
          >
            connectors.title.aws
          </span>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.overview
            </p>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.cur
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.req
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--completedStep"
          >
            <span
              class="StepWizard--completedIcon"
            >
              <span
                class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
                icon="small-tick"
              >
                <svg
                  data-icon="small-tick"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                >
                  <desc>
                    small-tick
                  </desc>
                  <path
                    d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.roleARN
            </p>
          </div>
          <div
            class="StepWizard--navStep StepWizard--activeStep"
          >
            <span
              class="StepWizard--number"
            >
              5
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
              style="--text-line-clamp: 2; width: 240px;"
            >
              connectors.ceAws.steps.test
            </p>
          </div>
        </div>
        <div
          class="StepWizard--stepDetails"
        >
           
          <div
            class="Layout--vertical StyledProps--main stepContainer"
          >
            <h2
              class="StyledProps--font StyledProps--font-h2 StyledProps--main header"
              level="2"
            >
              connectors.ceAws.testConnection.heading
            </h2>
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main StepsProgress--stepsProgress"
              id="steps-progress"
            >
              <div
                class="StepsProgress--progressBar"
              >
                <div
                  class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress--progressHeight"
                >
                  <div
                    class="bp3-progress-meter"
                    style="width: 33.33333333333333%;"
                  />
                </div>
              </div>
              <div
                class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500 StyledProps--margin-right-small"
                    icon="error"
                  >
                    <svg
                      data-icon="error"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        error
                      </desc>
                      <path
                        d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style=""
                  >
                    connectors.ceAws.testConnection.step1
                  </div>
                </div>
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-blank StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                    icon="blank"
                  >
                    <svg
                      data-icon="blank"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        blank
                      </desc>
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="font-weight: normal;"
                  >
                    connectors.ceAws.testConnection.step2
                  </div>
                </div>
                <div
                  class="StepsProgress--stepWrap"
                >
                  <span
                    class="bp3-icon bp3-icon-blank StyledProps--main StyledProps--color StyledProps--color-yellow500 StyledProps--margin-right-small"
                    icon="blank"
                  >
                    <svg
                      data-icon="blank"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        blank
                      </desc>
                    </svg>
                  </span>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="font-weight: normal;"
                  >
                    connectors.ceAws.testConnection.step3
                  </div>
                </div>
              </div>
            </div>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main submitBtn StyledProps--intent-primary Button--with-current-color"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                Finish
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
